# text-classifier

./: README.md  pyproject.toml  text-classifier.ipynb
.ipynb_checkpoints/: text-classifier-checkpoint.ipynb
