[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["saadoundhirat <saadoundhirat93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
keras = "^2.6.0"
matplotlib = "^3.4.3"
pandas = "^1.3.2"
sklearn = "^0.0"
jupyterlab = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
